# OS-labs

./: README.md
lab1/: README.md  build.sh  lab1.conf
lab1/src/: config.h  daemon.cpp  daemon.h  daemon_utils.cpp  daemon_utils.h  file_worker.cpp  main.cpp
lab2/: CMakeLists.txt  README.md  build.sh  conn_mq.cpp  conn_mq.hpp  conn_pipe.cpp  conn_pipe.hpp  conn_shm.cpp  conn_shm.hpp  host.cpp  protocol.hpp
src/: config.cpp  file_worker.h  utils.cpp  utils.h
